--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -1,14 +1,62 @@
+html{
+	background-color: #3030a5;
+	background: linear-gradient(#7b7b8f 0,#3030a5 100%);
+	background-repeat: no-repeat;
+	min-height: 100%;
+	position: relative;
+}
+
+body{
+	height: 100%;
+	width: 100%;
+	color: #ffc3c3;
+}
+
 main{
 	display: inline-block;
-	width: 30%;
-	border: solid #0000ff;
+	width: 70%;
+	/*border: solid #0000ff;*/
+	margin-left: 2%;
+	margin-top: 4%;
+	float: right;
+
 }
+
+main p{
+	padding: 3%;
+}
+
+main div h2{
+	text-decoration: underline;
+}
+
+main div p:nth-child(3){
+	color: #FF0000;
+}
+
 aside{
-	border: solid #00ff00;
+	/*border: solid #00ff00;*/
 	width: 20%;
 	display: inline-block;
-	height: 100%;
+	position:absolute;
+	top:0;
+	bottom:0;
+	margin-top: 9%;
+	margin-left: 2%;
 }
+
+a{
+	background-color: #ffc3c3 ;
+	border-radius: 10px;
+	padding: 3px;
+	text-decoration-style: italic;
+
+}
+
+a:hover{
+	background-color: #FF0000;
+}
+
 h1{
 	text-align: center;
 	text-transform: uppercase;
