--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -45,6 +45,10 @@ aside{
 	margin-left: 2%;
 }
 
+li progress{
+	text-transform: bold;
+}
+
 a{
 	background-color: #ffc3c3 ;
 	border-radius: 10px;
