--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -1,6 +1,6 @@
 html{
 	background-color: #3030a5;
-	background: linear-gradient(#7b7b8f 0,#3030a5 100%);
+	background: linear-gradient(#7b7b8f 0,#878789 100%);
 	background-repeat: no-repeat;
 	min-height: 100%;
 	position: relative;
