--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -10,7 +10,7 @@ body{
 	height: 100%;
 	width: 100%;
 	color: #ffc3c3;
-	background-image: url("../imgs/Space-Art-Wall.jpeg")
+	background-image: url("../imgs/Space-Art-Wall.jpeg");
 	background-repeat: no repeat;
 }
 
