--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -57,7 +57,7 @@ main div p:nth-child(3){
 aside{
 	width: 20%;
 	display: inline-block;
-	backgroung-color: #7eb1c3;
+	background-color: #7eb1c3;
 	bottom:0;
 	margin-left: 2%;
 	padding: 1%;
