--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -26,7 +26,8 @@ nav a{
 }
 nav a:hover{
 	background-color: #FFFFFF;
-	color: #0000FF; 
+	color: #f10000; 
+	text-decoration: italic;
 	border-radius: 5px;
 	padding: 2px;
 }	
