--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -82,3 +82,17 @@ img{
 	width: 85%;
 	margin-right: 2%;
 }
+
+.progress {
+  width: 60%;
+  max-width: 500px;
+  border: 3px solid #005555;
+  height: 10px;
+  border-radius: 2%;
+}
+
+.progress .progress__bar {
+  height: 100%;
+  width: 45%;
+  background-color: #550011;
+}
