--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -2,6 +2,7 @@ body{
 	height: 100%;
 	width: 100%;
 	font-family: monospace, sans-serif , arial;
+	font-size: small;
 }
 .log{
 	display: inline-block;
