--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -101,7 +101,7 @@ img{
 .progress {
   width: 80%;
   max-width: 500px;
-  border: 3px solid #005555;
+  border: 3px solid #c2dddd;
   height: 8px;
   border-radius: 20px;
 }
