--- a/personalPage/main/css/styles.css
+++ b/personalPage/main/css/styles.css
@@ -5,7 +5,7 @@ body{
 	font-size: small;
 }
 .log{
-	display: inline-block;
+	/*display: inline-block;*/
 	width: 70%;
 	/*border: solid #0000ff;*/
 	margin-left: 2%;
@@ -13,7 +13,7 @@ body{
 	float: right;
 }
 .nascar{
-	display: inline-block;
+	/*display: inline-block;*/
 	width: 70%;
 	float: right;
 
